--- a/app/views/shared/_navbar.haml
+++ b/app/views/shared/_navbar.haml
@@ -6,6 +6,6 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'Reseller Shop', '#', class: 'navbar-brand'
+      = link_to 'Liqo Schedule', '#', class: 'navbar-brand'
     .navbar-collapse.collapse
       = render 'shared/main_menu'
