--- a/app/views/materi_kultums/edit.haml
+++ b/app/views/materi_kultums/edit.haml
@@ -1,6 +1,6 @@
 .container
   .panel.panel-default
     .panel-heading
-      %h3.panel-title Input User
+      %h3.panel-title Edit Kultum
     .panel-body
       = render 'form'
