--- a/app/views/materi_talaqis/new.haml
+++ b/app/views/materi_talaqis/new.haml
@@ -1,6 +1,6 @@
 .container
   .panel.panel-default
     .panel-heading
-      %h3.panel-title Input Kultum
+      %h3.panel-title Input Talaqi
     .panel-body
       = render 'form'
