--- a/app/views/shared/_main_menu.haml
+++ b/app/views/shared/_main_menu.haml
@@ -7,6 +7,8 @@
     %li
       = link_to 'Materi Kultum', materi_kultums_path
     %li
+      = link_to 'Materi Talaqi', materi_talaqis_path
+    %li
       = link_to 'Schedule', schedules_path
 
 - if current_admin.present?
