--- a/app/views/schedules/_form.haml
+++ b/app/views/schedules/_form.haml
@@ -5,12 +5,8 @@
 
   .form-group
     = f.label :date
-    #datetimepicker1.input-group.date
-      - date_schedule = @schedule ? (@schedule.date != 0 && @schedule.date) ? @schedule.date : '' : ''
-      = f.text_field :date, {class: 'form-control', value: date_schedule}
-      %span.input-group-addon
-        %span.glyphicon.glyphicon-calendar
-      
+    .controls 
+      = f.text_field :date, {class: 'form-control', value: @schedule.date}
   .form-group
     = f.label :place
     .controls 
